# mc-lab

./: .gitignore  CLAUDE.md  README.md  claude.md  gamma_plot.py  gaussian_100d.ipynb  gaussian_mixture_plot.py  pyjags.ipynb  pyproject.toml
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
docs/: barker_mcmc_implementation.md  compass_artifact_wf-1ac09aba-80f8-43d5-94e3-80319f971588_text_markdown.md  hmc_implementation_plan.md  mcmc_comparison_improvements.md
ess-visualizer/: index.html
exam/: .latexindent.yaml  Hamiltonian Monte Carlo - working draft.md  beamerstyle.sty  diagnostics.py  differences.md  forside.tex  gelman-rubin.tex  gelman_rubin_detail.tex  gibbs_sampling.tex  hmc.py  importance_sampling.tex  main.tex  mala_barker.tex  markov_chain.tex  metropolist_hastings.tex  parallel_tempering.tex  pseudo_marginal.tex  rejection.tex  rejection_sampling.tex  slice_sampling.tex  sophie.tex  swap_moves.tex  unbiased.md  unbiasedMCMC.tex  vanilla_hmc.tex
notebooks/: RobustEllipticalSliceSampler.ipynb  convergence.ipynb  diffusion_mcmc_demo.ipynb  discrete_inverse_transform_demo.ipynb  gibbs_sampler_demo.ipynb  importance_sampling_demo.ipynb  independent_metropolis_hastings_demo.ipynb  inverse_transform.ipynb  inverse_transform_demo.ipynb  inverse_transform_theory_demo.ipynb  inverse_vs_quasi_exponential.ipynb  metropolis-hastings.ipynb  metropolis_hastings_demo.ipynb  metropolis_step_size_tuning_story.ipynb  mv_gaussian_demo.ipynb  stratified_inverse_transform.ipynb  tdr_demo.ipynb  transformation_methods_demo.ipynb  week1.ipynb
(+112 files in other folders)
