[project]
name = "mc-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mc_lab"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "ty>=0.0.1a17",
    "ruff>=0.12.8",
    "pre-commit>=4.3.0",
]
